--- a/webpack-starter-bootstrap-spa/src/theme/bootstrap/base.global.scss
+++ b/webpack-starter-bootstrap-spa/src/theme/bootstrap/base.global.scss
@@ -8,18 +8,18 @@
 @import "node_modules/bootstrap/scss/code";
 @import "node_modules/bootstrap/scss/grid";
 // @import "node_modules/bootstrap/scss/tables";
-// @import "node_modules/bootstrap/scss/forms";
-// @import "node_modules/bootstrap/scss/buttons";
+// @import "node_modules/bootstrap/scss/forms";        // See: ./form.js
+// @import "node_modules/bootstrap/scss/custom-forms"; // See: ./form.js
+// @import "node_modules/bootstrap/scss/input-group";  // See: ./form.js
 @import "node_modules/bootstrap/scss/transitions";
 // @import "node_modules/bootstrap/scss/dropdown";     // See: ./dropdown.js
+// @import "node_modules/bootstrap/scss/buttons";      // See: ./button.js
 // @import "node_modules/bootstrap/scss/button-group"; // See: ./button.js
-// @import "node_modules/bootstrap/scss/input-group";
-// @import "node_modules/bootstrap/scss/custom-forms";
 @import "node_modules/bootstrap/scss/nav";
 @import "node_modules/bootstrap/scss/navbar";
 // @import "node_modules/bootstrap/scss/card";
 // @import "node_modules/bootstrap/scss/breadcrumb";
-// @import "node_modules/bootstrap/scss/pagination";
+@import "node_modules/bootstrap/scss/pagination";
 // @import "node_modules/bootstrap/scss/badge";
 @import "node_modules/bootstrap/scss/jumbotron";
 // @import "node_modules/bootstrap/scss/alert";        // See: ./alert.js
